tests/errors/empty_circuit.nm
component AbstractComponent {
    pin A: passive = 1;
}

component Main {
    net TEST;

    AbstractComponent {
        A: TEST;
    }
}